--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,5 @@
 [tox]
-#envlist = format, check, security, py313, mutate
-envlist = format, check, security
+envlist = format, check, security, py313, mutate
 
 [flake8]
 max-line-length = 79
@@ -19,10 +18,10 @@ deps =
     #black
     isort
 commands =
-    autoflake --remove-all-unused-imports --remove-unused-variables --in-place --recursive src
-    isort src/
+    autoflake --remove-all-unused-imports --remove-unused-variables --in-place --recursive src tests
+    isort src/ tests/
     #black src/
-    autopep8 --in-place --aggressive --max-line-length 79 --recursive src
+    autopep8 --in-place --aggressive --max-line-length 79 --recursive src tests
 
 [testenv:check]
 description = Run linting and type checks
@@ -32,8 +31,8 @@ deps =
     mypy
     -r requirements.txt
 commands =
-    flake8 src/
-    mypy --follow-imports=skip src/
+    flake8 src/ tests/
+    mypy --follow-imports=skip src/ tests/
 
 [testenv:security]
 description = Run security checks
@@ -56,6 +55,8 @@ deps =
     pytest-mock
     -r requirements.txt
 skip_install = True
+setenv =
+    PYTHONPATH = {toxinidir}/src
 commands =
     pytest tests/ --cov=src --cov-report=xml --cov-report=term-missing --cov-report=html
 
@@ -68,4 +69,4 @@ allowlist_externals =
 commands =
     cosmic-ray init --force cosmic-ray.toml cosmic-ray.sqlite
     cosmic-ray exec cosmic-ray.toml cosmic-ray.sqlite
-    bash -c "cr-html cosmic-ray.sqlite > reports/cosmic_ray.html"
+    bash -c "cr-html cosmic-ray.sqlite > cosmic_ray.html"
