add batch requests, cache early, add complexity checks

--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,8 @@
 [tox]
-envlist = format, check, security, py313, mutate
+envlist = format, check, complexity, security, py313, mutate
 
 [flake8]
+max-complexity = 5
 max-line-length = 79
 
 [mypy]
@@ -33,6 +34,15 @@ deps =
 commands =
     flake8 src/ tests/
     mypy --follow-imports=skip src/ tests/
+
+[testenv:complexity]
+description = Run checks for cyclomatic and cognitive complexities.
+deps =
+    lizard
+    radon
+commands =
+    radon cc src/ -nb -a
+    lizard --CCN 5 --length 20 --arguments 3 src/
 
 [testenv:security]
 description = Run security checks
