--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,6 @@
 [tox]
-envlist = format, check, complexity, security, py313, mutate
+envlist = format, check, complexity, security, py313
+# , mutate
 
 [flake8]
 max-complexity = 5
