use Strategy pattern for dependency injection

--- a/tox.ini
+++ b/tox.ini
@@ -69,7 +69,7 @@ skip_install = True
 setenv =
     PYTHONPATH = {toxinidir}/src
 commands =
-    pytest tests/ --cov=src --cov-report=xml --cov-report=term-missing --cov-report=html
+    pytest tests/ --cov=src --cov-report=xml --cov-report=term-missing --cov-report=html --cov-fail-under 90
 
 [testenv:mutate]
 description = Run mutation tests
